2010-09-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-generate-hashcash): Change default to
	'opportunistic if hashcash is installed.

	* gnus-html.el (gnus-html-rescale-image): Fix up typo in rescaling.
	(gnus-html-put-image): Only call image-size once, since it's somewhat
	time-consuming on remote X servers.

2010-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-xmas.el (gnus-xmas-create-image): Don't try to examine image
	type on data, not a file name.

	* lpath.el: Fbind w3-parse-buffer for Emacs <=22 and XEmacs; fbind
	window-pixel-edges for Emacs 21.

	* gnus-html.el (gnus-article-html): Make work buffer multibyte for
	decoded contents.
	(gnus-html-put-image, gnus-html-rescale-image): Pass `file' argument.

2010-09-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-line-format): Remove %O (moderated) from
	group line format, since it isn't very interesting.

	* gnus-agent.el (gnus-agent-short-article),
	(gnus-agent-long-article): Increase values for these two variables,
	since most people are likely to have more network connection and
	storage than before.

	* gnus.el (gnus-refer-article-method): Change default to 'current.
	When referring an article, the common behaviour is to refer it from the
	current select method, not the native select method.  The chances of
	the native select method having the message in question is rather slim
	these days.

	* gnus-sum.el (gnus-auto-select-subject): Change default to
	`unseen-or-unread'.  I think it's likely that most people want to
	select an unseen article over a previously seen, but unread one.

	* gnus.el (gnus-mode-non-string-length): Change default to 30.  nil
	means that in the article buffer none of the minor mode elements will
	be shown, usually, and this is not desirable in most cases.

	* gnus-sum.el (gnus-summary-goto-unread): Change default to nil, so
	that commands like `d' (and the like) go to the next line in the